--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,49 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
+  <ion-navbar  color="green">
+    <ion-title style="text-align: center">
+      Music Thirst
     </ion-title>
   </ion-navbar>
 </ion-header>
-
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <b><h1 style="text-align: center">Albums</h1></b>
+  <ion-refresher (ionRefresh)="doRefresh($event)" >
+    <ion-refresher-content pulling-text="Pull to refresh....."
+    refreshingSpinner="bubbles">
+    </ion-refresher-content>
+  </ion-refresher>
+  <ion-list>
+      <ion-slides>
+          <ion-slide>
+         <img width="100%" height="50%"  src="../../assets/imgs/rihanna.jpg">
+         <h2>Good Girl Gone Bad</h2>
+          </ion-slide>
+          <ion-slide>
+        <img width="100%" height="50%" src="../../assets/imgs/chris.jpg">
+        <H2>Dont Judge Me</H2>
+          </ion-slide>
+          <ion-slide>
+            <img width="100%" height="100%" src="../../assets/imgs/grande.jpg">
+            <h2>One Last Time</h2>
+          </ion-slide>
+          <ion-slide>
+               <img width="100%" height="100%" src="../../assets/imgs/jason.jpg">
+               <H2>Sky's The Limit</H2>
+          </ion-slide>
+          <ion-slide>
+               <img width="100%" height="100%" src="../../assets/imgs/adele.jpg">
+               <H2>Rolling Stone</H2>
+          </ion-slide>
+        </ion-slides>
+        <br>
+        <b><h1 style="text-align: center">Artists</h1></b>
+    <ion-item-sliding *ngFor="let item of items">
+      <ion-item>
+      <img width="10%" height="10%"  src="../../assets/imgs/go.jpg"><b>{{item.title}}</b>
+      </ion-item>
+      <ion-item-options>
+        <button id="lol" ion-button danger (click)="removeItem(item)">Delete</button>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
 </ion-content>
