--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -42,7 +42,7 @@
       <img width="10%" height="10%"  src="../../assets/imgs/go.jpg"><b>{{item.title}}</b>
       </ion-item>
       <ion-item-options>
-        <button id="lol" ion-button danger (click)="removeItem(item)">Delete</button>
+        <button id="lol" ion-button (click)="removeItem(item)">Delete</button>
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
